# rust-lidar-utils

./: .gitignore  Cargo.toml  LICENSE  README.md
lidar-utils/: Cargo.toml
lidar-utils/src/: lib.rs  main.rs  opts.rs  pcap_to_pcd.rs
ouster-lidar/: Cargo.toml
ouster-lidar/src/: client.rs  config.rs  enums.rs  frame_converter.rs  lib.rs  packet.rs  pcd_converter.rs  utils.rs
ouster-lidar/test_files/: ouster_example.json  ouster_example.pcap
ouster-lidar/tests/: ouster.rs  ouster_client.rs
src/: common.rs  lib.rs  ouster.rs  utils.rs  velodyne.rs
src/ouster/: api.rs  client.rs  config.rs  consts.rs  enums.rs  frame_converter.rs  helper.rs  mod.rs  packet.rs  pcd_converter.rs  utils.rs
src/velodyne/: config.rs  consts.rs  firing.rs  firing_iter.rs  firing_xyz.rs  firing_xyz_iter.rs  frame_xyz_converter.rs  frame_xyz_iter.rs  functions.rs  helper.rs  marker.rs  mod.rs  packet.rs  pcd_converter.rs  point.rs  utils.rs
src/velodyne/frame_converter/: converter.rs  impls.rs  mod.rs
src/velodyne/pcd_converter/: context.rs  converter.rs  data.rs  impls.rs  mod.rs
test_files/: hdl32_example.pcap  ouster_client_test.toml  velodyne_example.pcap  velodyne_vlp16.pcap
tests/: ouster.rs  ouster_client.rs  velodyne.rs
velodyne-lidar/: Cargo.toml  README.md
velodyne-lidar/src/: batcher.rs  common.rs  config.rs  consts.rs  convert.rs  converter.rs  firing.rs  firing_xyz.rs  firing_xyz_iter.rs  frame_xyz.rs  frame_xyz_batcher.rs  frame_xyz_converter.rs  frame_xyz_iter.rs  iter.rs  kinds.rs  lib.rs  packet.rs  pcap.rs  pcd_converter.rs  point.rs  point_iter.rs  traits.rs  types.rs  utils.rs
velodyne-lidar/src/convert/: functions.rs  types.rs
velodyne-lidar/src/firing/: iter.rs  mod.rs
velodyne-lidar/src/firing_block/: iter.rs  mod.rs  types.rs
velodyne-lidar/src/firing_raw/: mod.rs
velodyne-lidar/src/firing_xyz/: iter.rs  mod.rs  types.rs
velodyne-lidar/src/frame_raw/: mod.rs
velodyne-lidar/src/frame_xyz/: batcher.rs  iter.rs  mod.rs  types.rs
velodyne-lidar/src/iter/: convert.rs  mod.rs  packet.rs  pcap.rs
velodyne-lidar/src/packet/: data.rs  generic.rs  mod.rs  position.rs
velodyne-lidar/src/par_iter/: mod.rs  pcap.rs
velodyne-lidar/src/point/: iter.rs  mod.rs  types.rs
velodyne-lidar/src/traits/: azimuth_range.rs  firing_like.rs  mod.rs  point_field.rs
velodyne-lidar/src/types/: channel.rs  channel_array.rs  firing_block.rs  firing_raw.rs  firing_xyz.rs  format.rs  frame_raw.rs  frame_xyz.rs  measurements.rs  point.rs
velodyne-lidar/test_files/: velodyne_vlp32.pcap
velodyne-lidar/tests/: velodyne.rs  velodyne_vlp32.pcap
velodyne-params/: Cargo.toml
velodyne-params/src/: checked.rs  error.rs  lib.rs  raw.rs  serialized.rs  types.rs
velodyne-test/: Cargo.toml
velodyne-test/tests/: velodyne.rs
