[package]
name = "lidar-utils"
version = "0.11.0"
authors = ["jerry73204 <jerry73204@gmail.com>"]
edition = "2018"
description = "Utilities for Velodyne and Ouster LIDARs"
documentation = "https://docs.rs/lidar-utils/"
homepage = "https://github.com/jerry73204/rust-lidar-utils"
repository = "https://github.com/jerry73204/rust-lidar-utils"
readme = "README.md"
license = "MIT"

[dependencies]
anyhow = "1.0.40"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
serde_yaml = "0.8.17"
serde-big-array = "0.3.2"
chrono = "0.4.19"
derivative = "2.2.0"
itertools = "0.10.0"
pcap = { version = "0.8.1", optional = true }
uom = { version = "0.31.1", features = ["si"] }
num-traits = "0.2.14"

[dev-dependencies]
log = "0.4.14"
pcap = "0.8.1"
toml = "0.5.8"

[features]
default = ["pcap"]
all-tests = ["ouster-client-test", "ouster-test", "velodyne-test"]
ouster-client-test = []
ouster-test = []
velodyne-test = []
docs-only = ["pcap/docs-rs"]

[package.metadata.docs.rs]
features = ["pcap", "docs-only"]
no-default-features = true
