[package]
name = "lidar-utils"
version = "0.13.0"
authors = ["jerry73204 <jerry73204@gmail.com>"]
edition = "2018"
description = "Utilities for Velodyne and Ouster LIDARs"
documentation = "https://docs.rs/lidar-utils/"
homepage = "https://github.com/jerry73204/rust-lidar-utils"
repository = "https://github.com/jerry73204/rust-lidar-utils"
readme = "README.md"
license = "MIT"

[dependencies]
anyhow = "1.0.44"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
serde_yaml = "0.8.21"
serde-big-array = "0.3.2"
chrono = "0.4.19"
derivative = "2.2.0"
itertools = "0.10.1"
pcap = { version = "0.9.0", optional = true }
uom = { version = "0.31.1", features = ["si"] }
num-traits = "0.2.14"
noisy_float = { version = "0.2.0", features = ["serde"] }

[dev-dependencies]
log = "0.4.14"
pcap = "0.9.0"
toml = "0.5.8"

[features]
default = ["pcap"]
all-tests = ["ouster-client-test", "ouster-test", "velodyne-test"]
ouster-client-test = []
ouster-test = []
velodyne-test = []
docs-only = ["pcap/docs-rs"]

[package.metadata.docs.rs]
features = ["pcap", "docs-only"]
no-default-features = true
