[package]
name = "lidar-utils"
version = "0.13.1"
authors = ["jerry73204 <jerry73204@gmail.com>"]
edition = "2021"
description = "Utilities for Velodyne and Ouster LIDARs"
documentation = "https://docs.rs/lidar-utils/"
homepage = "https://github.com/jerry73204/rust-lidar-utils"
repository = "https://github.com/jerry73204/rust-lidar-utils"
readme = "README.md"
license = "MIT"

[dependencies]
ouster-lidar = { version = "0.1.0", path = "../ouster-lidar" }
velodyne-lidar = { version = "0.1.0", path = "../velodyne-lidar" }

[dev-dependencies]
