[package]
name = "lidar-utils"
version = "0.13.1"
authors = ["jerry73204 <jerry73204@gmail.com>"]
edition = "2021"
description = "Utilities for Velodyne and Ouster LIDARs"
documentation = "https://docs.rs/lidar-utils/"
homepage = "https://github.com/jerry73204/rust-lidar-utils"
repository = "https://github.com/jerry73204/rust-lidar-utils"
readme = "README.md"
license = "MIT"

[dependencies]
anyhow = "1.0.53"
futures = "0.3.21"
itertools = "0.10.3"
ouster-lidar = { version = "0.1.0", path = "../ouster-lidar" }
par-stream = { version = "0.10.0", features = ["runtime-tokio"] }
pcap = "0.9.1"
pcd-rs = "0.8.0"
structopt = "0.3.26"
tokio = { version = "1.16.1", features = ["rt-multi-thread"] }
velodyne-lidar = { version = "0.1.0", path = "../velodyne-lidar", features = ["async"] }

[dev-dependencies]
