[package]
name = "ouster-lidar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
serde-big-array = "0.3.2"
chrono = "0.4.19"
derivative = "2.2.0"
itertools = "0.10.3"
num-traits = "0.2.14"
noisy_float = { version = "0.2.0", features = ["serde"] }
measurements = "0.11.0"

[dev-dependencies]
pcap = "0.9.1"

[features]
all-tests = ["ouster-client-test"]
ouster-client-test = []
