[package]
name = "velodyne-lidar"
version = "0.1.0"
edition = "2021"
authors = ["jerry73204 <jerry73204@gmail.com>"]
description = "Velodyne lidar data processing algorithms and utilities"
documentation = "https://docs.rs/velodyne-lidar/"
homepage = "https://github.com/jerry73204/rust-lidar-utils"
repository = "https://github.com/jerry73204/rust-lidar-utils"
categories = ["algorithms"]
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
serde = { version = "1.0.183", features = ["derive"] }
serde_yaml = "0.9.25"
serde-big-array = "0.5.1"
chrono = "0.4.26"
derivative = "2.2.0"
itertools = "0.11.0"
noisy_float = { version = "0.2.0", features = ["serde"] }
measurements = "0.11.0"
once_cell = "1.18.0"
strum = { version = "0.25.0", features = ["derive"] }
nmea = { version = "0.5.0", optional = true }
pcap = { version = "1.1.0", optional = true }
log = "0.4.20"
rayon = { version = "1.7.0", optional = true }

# [dev-dependencies]
# rand = "0.8.4"

[features]
default = []
full = ["nmea", "pcap", "parallel"]
docs-rs = ["full"]
parallel = ["rayon"]

[package.metadata.docs.rs]
features = ["parallel", "pcap", "docs-rs"]
no-default-features = true
