[package]
name = "velodyne-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
itertools = "0.10.3"
pcap = "0.9.1"
velodyne-lidar = { version = "0.1.0", path = "../velodyne-lidar", features = ["full"] }
