[package]
name = "velodyne-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
itertools = "0.11.0"
pcap = "1.1.0"
velodyne-lidar = { version = "0.1.0", path = "../velodyne-lidar", features = ["full"] }
